<resources>
    <string name="app_name">Pet Sitter</string>
    <string name="title">Welcome to Pet Sitter!</string>
    <string name="login">Login</string>
    <string name="reg">Register</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="search">Search</string>
    <string name="entries">Dog Cat Dog</string>
    <string name="d">Dog</string>
    <string name="c">Cat</string>
    <string name="details">Additional Details</string>

    <string name="endorsed">Endorsed</string>
    <string name="sitter_details">Details</string>
    <string name="settings">Settings</string>
    <string name="searching_title">I am Searching For...</string>
    <string name="pet">Pets</string>
    <string name="sitter">Sitters</string>
    <string name="sitter_near_me">Sitters Near Me</string>
    <string name="sitter_selection1">PET PREFERENCE</string>
    <string name="pet_selection">What kind of pets do you want to sit?</string>
    <string name="other">Other</string>
    <string name="next">CONTINUE</string>

    <string name="petsize">PET SIZE(LB):</string>
    <string name="pet_details">Additional Details</string>
    <string name="pet_size1">0-15</string>
    <string name="pet_size2">16-40</string>
    <string name="pet_size3">41-100</string>
    <string name="pet_size4">101+</string>
    <string name="pet_age">PET AGE</string>
    <string name="pet_age1">&lt; 1 years</string>
    <string name="pet_age2">Adult</string>
    <string name="pet_age3">&gt; 10 years</string>

    <string name="settings_title">Settings</string>

    <string-array name="pet_kinds">
        <item>Cats</item>
        <item>Dogs</item>
        <item>Other</item>
    </string-array>

    <string-array name="rate">
        <item>$10-$15</item>
        <item>$15-$20</item>
        <item>$20+</item>
    </string-array>
    <string name="kobe"> Kobe is a hyper dog who loves to go on walks at least twice a day
        and play fetch.</string>
    <string name="bob">I like long walks at the beach with animals and I guarantee to give
        your pet the same experience.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
