<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:text="@string/pet_details"
        android:textSize="36sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/petsize"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="24sp">
        </TextView>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <RadioButton android:id="@+id/radio_size1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_size1"
                android:textSize="24sp"
                />
            <RadioButton android:id="@+id/radio_size2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_size2"
                android:textSize="24sp"/>
            <RadioButton android:id="@+id/radio_size3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/pet_size3"
                android:textSize="24sp"/>
            <RadioButton android:id="@+id/radio_size4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/pet_size4"
                android:textSize="24sp"/>
        </RadioGroup>

        <TextView
            android:id="@+id/pet_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_age"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="24sp"
            android:layout_marginTop="20dp">
        </TextView>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <RadioButton android:id="@+id/pet_age1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_age1"
                android:textSize="24sp"
                />
            <RadioButton android:id="@+id/pet_age2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_age2"
                android:textSize="24sp"/>

            <RadioButton android:id="@+id/pet_age3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_age3"
                android:textSize="24sp"/>
        </RadioGroup>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="36sp"
        android:layout_marginBottom="20dp"
        android:layout_margin="20dp"/>


</LinearLayout>