<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:text="@string/searching_title"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="55sp"
        />
    <Button
        android:id="@+id/search_pet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/pet"
        android:textSize="24sp"
        android:background="@drawable/button_selector"
        android:textColor="@color/colorAccent"
        android:fontFamily="sans-serif-condensed-medium"
        />
    <Button
        android:id="@+id/search_sitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/sitter"
        android:textSize="24sp"
        android:background="@drawable/button_selector"
        android:textColor="@color/colorAccent"
        android:fontFamily="sans-serif-condensed-medium"
        />
</LinearLayout>